--- a/styling.css
+++ b/styling.css
@@ -1,27 +1,17 @@
 body {
     background-color: rgb(13, 9, 53);
-    justify-content: center;
-    align-items: center;
     text-align: center;
+    margin: 1vh;
 }
 
 img {
     width: 30vh;
-    padding: 5vh;
-    position: absolute;
-    top: 37%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 1vh;
 }
 
 .btn {
     padding: 3vh;
     background-color: rgb(15, 212, 230);
-    width: max-content;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: black;
     text-decoration: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, Helvetica;
@@ -31,12 +21,19 @@ img {
     border-color: rgb(6, 103, 112);
     font-size: 3.5vh;
 }
-.secondborder {
+.btn-copy {
+    padding: 3vh;
+    background-color: rgb(58, 230, 15);
+    color: black;
+    text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, Helvetica;
     border-style: solid;
     border-width: 1vh;
     border-radius: 2vh;
-    border-color: rgb(76, 41, 202);
+    border-color: rgb(27, 112, 6);
+    font-size: 3.5vh;
 }
+
 
 .disclaimer {
     font-size: 2vh;
@@ -48,8 +45,4 @@ img {
     color: rgba(255, 255, 255, 0.336);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, Helvetica;
     text-decoration-line: none;
-    position: absolute;
-    top: 115%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
